# LightRAG

./: .gitignore
docs/: graphrag_capability.md
experiments/retrieval-harness-rs/: Cargo.toml
experiments/retrieval-harness-rs/cases/: initial_eval_cases.json  mixed_eval_cases_10.json  mixed_eval_cases_10_adversarial.json  mixed_eval_cases_10_hard.json
experiments/retrieval-harness-rs/config/: default.toml
experiments/retrieval-harness-rs/python/: run_baseline.py  run_mcp_tool.py  test_run_baseline.py
experiments/retrieval-harness-rs/src/: baseline.rs  cli.rs  config.rs  error.rs  evidence.rs  lib.rs  main.rs  mcp_client.rs  orchestrator.rs  policy.rs  report.rs  types.rs
lightrag/: __init__.py
lightrag/api/: lightrag_server.py
lightrag/capabilities/: __init__.py  graph_rag.py
obsidian/: AGENTS.md
obsidian/10_Raw/: .manifest.json
obsidian/20_Wiki/: index.md
obsidian/90_Meta/: index.md
rag_eval/: README.md  __init__.py  build_report.py  common.py  config.yaml  evaluate_results.py  generate_questions.py  run_queries.py  visualize_results.py
rag_test/: eval_questions.jsonl  eval_rag_vs_graph_score.json  eval_rag_vs_graph_score.md  eval_rag_vs_graph_score_agent.json  eval_rag_vs_graph_score_agent.md
rag_test/docs/: design-memos-mcp-skills-integration.md  kengine-kb-api-guide.md  rag_qa_agent.md  reuse-guide-memos-rag-sync.md
rag_test/rag-test-docs/: 01_system_overview.md  02_database_schema.md  03_api_reference.md  04_kafka_redis_flow.md  05_troubleshooting_guide.md  (+1 more)
tests/: test_graphrag_capability.py  test_graphrag_routes.py
(+28 files in other folders)
