[package]
name = "retrieval-harness"
version = "0.1.0"
edition = "2021"

[lib]
name = "retrieval_harness"
path = "src/lib.rs"

[[bin]]
name = "retrieval-harness"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
toml = "0.8"
